# Learnyx-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  entrypoint.sh  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: dependabot.yml
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/applications/timetable/: __init__.py  apps.py  models.py  urls.py
core/applications/timetable/api/: serializers.py  views.py
core/applications/timetable/migrations/: 0001_initial.py
core/applications/users/: admin.py  email.py  models.py  signals.py  token.py
core/applications/users/api/: jwt.py  routers.py  schemas.py  serializers.py  views.py
core/applications/users/migrations/: 0002_alter_user_options_user_is_verified_and_more.py  0003_alter_user_options_alter_studentprofile_student_id.py
core/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
core/helper/: authentications.py  custom_exceptions.py  enums.py  interface.py  models.py
core/templates/: base.html
core/templates/email/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html  username_changed_confirmation.html  username_reset.html
docs/: conf.py  index.rst  make.bat
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
